@@ -1,3 +1,8 @@
+2002-08-04  Per Bothner  <per@bothner.com>
+
+	* strings.scm (string-ci=?, string<?, string>?, string<=?, string>=?,
+	string-ci<?, string-ci>?, string-ci<=?, string-ci>=?):  New procedures.
+
 2002-06-25  Per Bothner  <per@bothner.com>
 
 	* uniform.scm:  Add missing type specifiers.
